# C_Geonames

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
examples/: advanced_features.c  basic_search.c  reverse_geocoding.c
include/: cgeonames.h  geonames.h
source/: cgeonames.c  geonames.c
tests/: test_engine.c  test_with_real_data.c
